
Release Notes
=============

trunk
-----
* fix bugs in `I3Time` get and set for unix time
* add `__bool__` operateor to `I3Double`, `I3UInt32`, `I3MCTree` and
  `I3FilterResult` in addition to `__nonzero__`. python2 uses `__nonzero__` but
  python3 uses `__bool__`.
* Logic on bool was changed for `I3MCTree` to call false on an empty tree and true
  on a non-empty tree. It had mistakenly been set to the opposite. 
* Add calibration, R&D devices to OMGeo/ModuleGeo

December 11, 2018, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V18-12-00

* Support of double expontential SPE fits.
* Bug fix for sDST.
* New I3RecoPulseSeriesMapCombineByModule.
* Add equality operators for I3SuperDST and I3FilterResult.

June 13, 2018, Alex Olivas  (olivas@icecube.umd.edu)
====================================================
Release V18-06-00

* Add Gen2 R&D modules
* I3LinearizedMCTree bug fix for reading old data
* I3TimeWindow gets an intersection operator
* add get_heads to I3MCTree pybindings


November 15, 2017, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V17-11-00

* Fix a memory leak in new I3MCTree serialization.
* Add GetModJulianMicroSec() to I3Time which avoids using floats so that
  conversion to python datetime can occur without any floating point arithmetic.
* Add I3SuperDSTTrigger pybinidngs.
* Expose both I3ParticleID constructors.
* Fix nasty quadratic behavior in I3LinearizedMCTree serialization.
* Add the SMP particle for exotic physics.
* Deprecate I3MCList.
* Add support for storing flasher configurations in the D-frame.
* Truncate I3Time pybindings to nearest microsecond.
* Add pretty print for I3TimeWindow. Also, add fractional seconds to the
  I3EventHeader pretty print.
* Add __repr__ to TriggerKey pybinding.

March 23, 2017, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V17-03-01
